# RobotSimulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: arena.cpp  arena.h  arena_entity.h  arena_entity_params.h  arena_immobile_entity.h  arena_mobile_entity.h  arena_params.h  color.h  graphics_arena_viewer.cpp  graphics_arena_viewer.h  main.cpp  obstacle.cpp  obstacle.h  player.h  simple_graphics.cpp
src/arena/: arena.cpp  arena.h
src/battery/: player_battery.cpp  player_battery.h
src/common/: position.h
src/entities/: arena_entity.h  arena_immobile_entity.h  arena_mobile_entity.h  entity_types.h  obstacle.cpp  obstacle.h  player.cpp  player.h
src/events/: event_base_class.h  event_collision.cpp  event_collision.h  event_distress.cpp  event_distress.h  event_key_press.cpp  event_key_press.h  event_types.h
src/graphics/: graphics_arena_viewer.cpp  graphics_arena_viewer.h  simple_graphics.h
src/motion_handlers/: motion_behavior.cpp  motion_behavior.h  motion_commands.h  motion_handler.h  player_motion_handler.cpp  player_motion_handler.h
src/params/: arena_entity_params.h  arena_mobile_entity_params.h  arena_params.h  player_params.h  robot_params.h
src/sensors/: sensor.h  sensor_touch.cpp  sensor_touch.h  sensor_types.h
src/subject/: subject.cpp  subject.h
